# distribution-vae

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  report.html
autoresearch/: README.md  analyze.py  plot_reconstructions.py  prepare.py  program.md  results.tsv  run_and_plot.py  train.py  worst_recons.py  worst_recons_script.py
configs/: best_hyperopt.yaml  default.yaml  example_perturb_seq.yaml  exp_large_mixed.yaml  exp_large_model.yaml  exp_mixed_loss.yaml  rl_2kg_singles_mlp.yaml  rl_2kg_singles_mlp_pearson.yaml  rl_2kg_singles_mlp_pearson_rescale.yaml  rl_2kg_singles_mlp_pearson_rescale_hinge2x.yaml  rl_2kg_singles_mlp_pearson_rescale_long.yaml  rl_cell_2kg_singles.yaml  rl_cell_50p.yaml  rl_cell_mini10.yaml  rl_perturbation.yaml  rl_perturbation_2kg_allp.yaml  rl_perturbation_2kg_allp_rownorm.yaml  rl_perturbation_50p.yaml  rl_perturbation_50p_attn.yaml
data/: synthetic_2k.h5ad
dist_vae/: __init__.py  data.py  eval.py  hyperopt.py  losses.py  model.py  rl_cell_model.py  rl_data.py  rl_model.py  rl_train.py  train.py
labbook/: DECISIONS.md  LOCKS.md  STATUS.md  TASKS.md
notebooks/: quickstart.ipynb
scripts/: download_2kg_data.py  download_sample_data.py  encode_dataset.py  eval_rl_perturbation.py  evaluate.py  generate_synthetic_dataset.py  hyperopt.py  make_mini_dataset.py  plot_confusion_on_reward.py  plot_gene_covariance.py  plot_jitter_analysis.py  plot_k64_panel.py  plot_quantile_tokenization.py  rerun_reward_ball_eval.py  train.py  train_rl.py  train_rl_cell.py  viz_reward_landscape.py
tests/: conftest.py  test_cosine_similarity.py  (+9 more)
(+108 files in other folders)
